<resources>
    <string name="app_name">Picker</string>
    <string name="speaker_btn">Press To Speak</string>
    <string name="current_location" translatable="false">Set My Car Location</string>
    <string name="alarm_btn">Set Alarm Reminder</string>
    <string name="picture_btn">Upload Picture</string>
    <string name="directions_btn">Navigate Me</string>
    <string name="set_car_location" translatable="false">Set Car Location</string>
    <string name="gas_station" translatable="false">Near Gas Station</string>
    <string name="garage" translatable="false">Near Garage</string>
    <string name="video">RECORD VIDEO</string>
    <string name="record" translatable="false">Record Voice</string>
    <string name="title_activity_map" translatable="false">Map</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">WELCOME TO PICKER!</string>
    <string name="nav_header_subtitle" translatable="false">Hello user, please select an action to start </string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share">GET HELP</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="emergency_tools">Emergency Tools</string>
    <string name="prompt">Hey! I need help! I just pressed the emergency button from PICKER to get your help.</string>
    <string name="search_hint">Enter destination... </string>
    <string name="nevigate_sure">Start navigation to</string>
    <string name="navigate_two_markers">Start To Navigate Now?</string>
    <string name="no_navigation">Cancel navigation</string>
    <string name="start_navigate">GO!</string>
    <string name="or">OR</string>
    <string name="calender">OPEN CALENDAR</string>
    <string name="call">OPEN CONTACTS</string>
    <string name="find">Find Me</string>
    <string name="google_place_api" translatable="false">AIzaSyAn2siGJTLUfFTjxJmh1A4cc5jYNt17hzw</string>
    <string name="search_contact">Search Someone</string>
    <string name="calander_hint">Enter a task for your picked date</string>
    <string name="button_save">SAVE</string>
    <string name="add_time">Add time to the alert</string>
    <string name="remove_time">Remove time from the alert</string>
    <string name="cancel_btn">Cancel </string>
    <string name="add_video">ADD VIDEO</string>
    <string name="record_video">RECORD NEW</string>
    <string name="title_calendar">Enter title for event</string>
    <string name="set_alarm">Add Alarm</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="enter">Hello, WELCOME to PICKER!  please enter your name:</string>
    <string name="send_new_message">SEND NEW MESSAGE</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="description">Description:</string>
    <string name="message">Message:</string>
    <string name="add">Add</string>
    <string name="send">Send</string>
    <string name="hint_name">Enter user name</string>
    <string name="hint_email">Enter user email</string>
    <string name="hint_phone">Enter user phone</string>
    <string name="hint_description">Enter user description</string>
    <string name="hint_message">Enter your message</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="upload">Upload Picture</string>
    <string name="search_places_hint" translatable="false">Enter Places To Search</string>

   <string-array name="places_list">
       <item>hospitals</item>
       <item>pharmacy</item>
       <item>police</item>
       <item>shopping mall</item>
       <item>restaurants</item>
       <item>museum</item>
       <item>library</item>
       <item>night club</item>
       <item>parking</item>
       <item>post office</item>
       <item>school</item>
       <item>synagogue</item>
       <item>taxi stand</item>
       <item>train station</item>
       <item>zoo</item>
       <item>bars</item>
       <item>laundry</item>
       <item>bank</item>
       <item>airport</item>
       <item>gym</item>
       <item>gas station</item>
       <item>cafe</item>
       <item>electronics store</item>
       <item>car wash</item>

   </string-array>


</resources>
