<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_gravity="center_vertical"
    android:theme="@style/Theme.UserDialog.AppCompat"
    tools:context=".AddNewContact">

    <TextView
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:id="@+id/Title"
        android:text="@string/add_new_contact"


        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:src="@drawable/person"
        app:civ_border_color="@color/color_turkiz"
        app:civ_border_width="3dp" />
    <android.support.v7.widget.CardView
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />
                <EditText
                    android:id="@+id/Name_edt"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="5dp"
                    android:hint="@string/hint_name"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/phone"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/UserPhone_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/hint_phone"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:gravity="center_vertical"
                    android:textSize="25sp"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/email_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/hint_email"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:text="@string/description"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/description_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/hint_description"
                    android:padding="5dp" />
            </LinearLayout>



        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/add_btn"

            android:textColor="#fff"
            android:text="@string/add"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/button_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:layout_marginStart="10dp"
            android:id="@+id/upload_btn"
            android:textColor="#fff"
            android:text="@string/upload"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/button_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />



    </LinearLayout>



</LinearLayout>