<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:theme="@style/Theme.UserDialog.AppCompat"
    tools:context=".SendMessage">

    <TextView

        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:gravity="center_horizontal"
        android:text="@string/send_new_message"
        android:textSize="40sp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView

        android:layout_margin="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/fromUserName_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/hint_name"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/message"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/body_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/hint_message"
                    android:padding="5dp" />
            </LinearLayout>




        </LinearLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:padding="15dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/Name_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/hint_name"
                    android:padding="5dp" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/phone"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/UserPhone_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/hint_phone"
                    android:padding="5dp" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:gravity="center_vertical"
                    android:textSize="25sp"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/email_edt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/hint_email"
                    android:padding="5dp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

<LinearLayout
    android:layout_marginTop="20dp"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/send_btn"
        android:layout_marginEnd="5dp"
        android:textColor="#fff"
        android:text="@string/send"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/button_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp" />


    <TextView
        android:layout_marginEnd="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:text="@string/or"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp" />

    <Button
        android:layout_marginEnd="5dp"
        android:id="@+id/addUser_btn"
        android:background="@drawable/ic_add_contact"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="5dp" />
    <TextView
        android:layout_marginEnd="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:text="@string/or"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp" />

    <Button
        android:id="@+id/email_btn"
        android:background="@drawable/ic_send_email"
        android:layout_width="40dp"
        android:layout_height="40dp" />

</LinearLayout>

</LinearLayout>