<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.UserDialog.AppCompat"
    tools:context=".CalenderActivity">

<LinearLayout
    android:layout_marginTop="50dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CalendarView

        android:outlineSpotShadowColor="@color/colorPrimary"
        android:weekNumberColor="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>

    <Switch
        android:id="@+id/switch_timepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/add_time"

        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp" />

    <EditText


        android:textColorHint="#ffff"
        android:hint="@string/title_calendar"
        android:id="@+id/edit_task_title"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:textColor="#ffff"
        android:textSize="20dp">



    </EditText>




    <EditText


        android:textColorHint="#ffff"
        android:hint="@string/calander_hint"
        android:id="@+id/edit_task"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:textColor="#ffff"
        android:textSize="18dp">

    </EditText>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:padding="5dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/alarm_btn"
            android:text="@string/set_alarm"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp" />

        <Button

            android:id="@+id/save_btn"
            android:text="@string/button_save"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />





    </LinearLayout>

</LinearLayout>